fix #44441: The Subject field is covered ,not full shown when adding Text or Absence request to locate the filed editing on Sumsung

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/MobileDayView.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/MobileDayView.css
@@ -142,6 +142,9 @@
 	height: auto;
 	cursor: pointer;
 	z-index: 1002;
+	max-height: 100%;
+	overflow-y: scroll;
+	-webkit-overflow-scrolling: touch;
 }
 .mobile-add-request-form .well{
 	margin: 0;
